--- a/index.html
+++ b/index.html
@@ -5,5 +5,29 @@
     <title>Tech Rollo</title> 
   </head> 
   <body> 
+    <h1>Rollo Tomasi</h1>
+    <h2>Rollo Tomasi</h2>
+    <h3>Rollo Tomasi</h3>
+    <h4>Rollo Tomasi</h4>
+    <h5>Rollo Tomasi</h5>
+    <h6>Rollo Tomasi</h6>
+
+    <p>I am a Genius!</p>
+    <p>I want to be great at this stuff</p>
+
+    <p>List of Car I want to Buy</p>
+    <ol>
+      <li>Bentley</li>
+      <li>Benz</li>
+      <li>BMW</li>
+    </ol>
+
+    <p>List of Brands I like</p>
+    <ul>
+      <li>Nivea</li>
+      <li>Bottega</li>
+      <li>Louis Vutton</li>
+    </ul>
+
   </body> 
 </html>
