--- a/Intro-To-Code/index.html
+++ b/Intro-To-Code/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
     <h3>Tech Talent Africa</h3>
+    <style type="text/css">
+        p {
+            color:brown;
+            font-weight: bold;
+        }
+    </style>
 
     <body>
 
-    <p>I am happy to be here</p>
-    <p>Thank you IBM</p>
+    <p>Hello everyone, my name is Nnamdi</p>
+    <p>Thank you IBM for this opportunity</p>
 
     <p>Here is a random ordered list of items</p>
 
@@ -15,7 +21,7 @@
         <li>Cars</li>
     </ol>
 
-    <p>Here is a random unordered list of items</p>
+    <p style="color:blue">Here is a random unordered list of items</p>
     <ul>
         <li>House</li>
         <li>Bus</li>
